editar plantilla de rectas

--- a/DApp/Prescrypto/templates/recetas.html
+++ b/DApp/Prescrypto/templates/recetas.html
@@ -19,5 +19,6 @@
     <div class="card">
         <h3><a class="contact" href={% url "prescriptions" %}>Dr. juan guillermo alonso chuchillas</a></h3>
     </div>
+    {{ data }}
 </div>
 {% endblock content %}
