--- a/DApp/Prescrypto/static/css/style.css
+++ b/DApp/Prescrypto/static/css/style.css
@@ -8,7 +8,7 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background:#040b07;
     color:#ffffff;
-    /* font-size: 16; */
+    font-size: 18;
 }
 hr{
     margin-top: 1rem;
@@ -43,8 +43,8 @@ main{
 
 .centered_group{
     margin-top: 4rem;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 22%;
+    margin-right: 22%;
     text-align: justify;
 }
 
@@ -112,6 +112,7 @@ input{
 }
 
 nav{
+    padding-top: 3px;
     margin-left: 20%;
     margin-right: 20%;
     margin-top: 2rem;
@@ -126,7 +127,7 @@ nav{
 }
 
 nav .logo{
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
     float: left;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -149,6 +150,7 @@ nav ul{
     justify-content: center;
     align-items: center;
     text-transform: capitalize;
+    margin-bottom: 3px;
 }
 
 nav ul li{
@@ -159,10 +161,10 @@ nav ul li{
 }
 
 nav ul a{
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 12px;
+    padding-right: 12px;
     text-decoration: none;
     color: black;
     font-size: 18;
