editar pagina de inicio

--- a/DApp/Prescrypto/templates/home.html
+++ b/DApp/Prescrypto/templates/home.html
@@ -41,7 +41,7 @@
         <div style="margin-left: 1rem;">
             <h2 style="color: #3bb74c; padding-bottom: 5px; text-align: left;">APOYAMOS LA TRANSPARENCIA</h2>
             <p>
-                Todas las prescripciones almacenadas en la red blockchain son publicas, cualquier usuario puede consultar información de las prescripciones sobre otro paciente o médico. Esto garantiza que no exista fraude en el sistema de Prsscrypto.
+                Todas las prescripciones almacenadas en la red blockchain son publicas, cualquier usuario puede consultar información de las prescripciones sobre otro paciente o médico. Esto garantiza que no exista fraude en el sistema de Prescrypto.
             </p>
         </div>
 
@@ -51,7 +51,7 @@
     <div style="margin-right: 1rem;">
         <p>
             <br>
-            <h2 style="color: #3bb74c; padding-bottom: 5px; text-align: right;"">CONTENIDO ORIENTADO AL USUARIO</h2>
+            <h2 style="color: #3bb74c; padding-bottom: 5px; text-align: right;">CONTENIDO ORIENTADO AL USUARIO</h2>
             En este sitio web encontraras tus prescripciones ordenadas por el nombre de los medicos con los que hayas pasado consulta. Esto te premitira encontrar mas rapido lo que necesites.
             <br>
         </p>
