--- a/DApp/Prescrypto/templates/core/login.html
+++ b/DApp/Prescrypto/templates/core/login.html
@@ -1,25 +1,27 @@
 {% extends "core/master.html" %}
 {% block title %}Log in{% endblock title %}
 {% block content %}
-<div class="centered_group">
-    <div style="margin-top: 20%;" class="card">
-        <div>
-            <h1 style="font-size: 40;">Log in</h1>
+<section>
+    <div>
+        <div class="transparent_card">
+            <div>
+                <h1 style="font-size: 40;">Iniciar sesión</h1>
+            </div>
+            <form action="" method="POST">
+                {% csrf_token %}
+                <div>
+                    <label for="name">Usuario:</label>
+                    <input type="text" name="username" placeholder="ingresa tu nombre de usuario" required>
+                </div>
+                <div>
+                    <label for="password">Contraseña:</label>
+                    <input type="password" name="password" placeholder="ingresa tu contraseña" required>
+                </div>
+                {{data}}
+                <button class="btn glow" type="submit">Log in</button>
+            </form>
         </div>
-        <form action="" method="POST">
-            {% csrf_token %}
-            <div>
-                <label for="name">Usuario:</label>
-                <input type="text" name="username" placeholder="ingresa tu nombre de usuario" required>
-            </div>
-            <div>
-                <label for="password">Contraseña:</label>
-                <input type="password" name="password" placeholder="ingresa tu contraseña" required>
-            </div>
-            {{data}}
-            <button type="submit">Log in</button>
-        </form>
+        <a class="link" href={% url "sign_up" %}>Crear una cuenta</a>
     </div>
-    <a href={% url "sign_up" %}>Crear una cuenta</a>
-</div>
+</section>
 {% endblock content %}
