--- a/DApp/Prescrypto/templates/core/master.html
+++ b/DApp/Prescrypto/templates/core/master.html
@@ -10,27 +10,19 @@
 <body>
     <header>
         <nav>
-            <img style="height: 3rem; padding-left: 5px; padding-bottom: 5px;" src="{% static "img/icon.png" %}" alt="Prescrypto logo">
-            <div style="width: 25%;" class="logo">
-                <a href={% url "home" %}>Prescrypto</a>
-            </div>
-            <ul style="width: 45%; justify-content: center;">
-                <li><a href={% url "home" %}>Inicio</a></li>
-                <li><a href={% url "recetas" %}>Mis recetas</a></li>
-            </ul>
-            <ul style="width: 30%; justify-content: right;">
-                {% comment %} <li>
-                    <a style="background-color: #e3e3e3; margin-right: 5px; border-radius: 20px;" href={% url "login" %}>Iniciar sesion</a>
-                </li> {% endcomment %}
-                <li>
-                    {% if auth == False %}
-                        <a style="background-color: #60ff75; margin-right: 5px; border-radius: 25px;" href={% url "login" %}>Iniciar sesion</a>
-                    {% endif %}
-                    {% if auth == True %}
-                        <a style="background-color: #e3e3e3; margin-right: 5px; border-radius: 25px;" href={% url "logout" %}>Cerrar sesion</a>
-                    {% endif %}
-                </li>
-            </ul>
+            <a style="margin-left: 0.5rem; margin-right: 0rem; margin-top: auto; margin-bottom: auto;">
+                <img style="height: 3rem; padding: 0; margin: 0;" src="{% static "img/icon.png" %}" alt="Prescrypto logo">
+            </a>
+            <a style="margin-left: 0; font-weight: 700;" href={% url "home" %}>Prescrypto</a></li>
+            {% if auth == False %}
+            <a class="login" href={% url "login" %}>Iniciar sesion</a>
+            {% endif %}
+            {% if auth == True %}
+                <a href={% url "home" %}>Inicio</a></li>
+                <a href={% url "recetas" %}>Recetas</a></li>
+                <a href={% url "account" %}>Account</a>
+                <a class="logout" href={% url "logout" %}>Cerrar sesion</a>
+            {% endif %}
         </nav>
         {% block header %}{% endblock header %}
     </header>
@@ -38,6 +30,10 @@
         {{home_data}}
         {% block content %}{% endblock content %}
     </main> 
-    <footer>{% block footer %}{% endblock footer %}</footer>
+    <footer>
+        {% block footer %}
+            {% include "core/footer.html"%}
+        {% endblock footer %}
+    </footer>
 </body>
 </html>
