--- a/DApp/Prescrypto/templates/myfirst.html
+++ b/DApp/Prescrypto/templates/myfirst.html
@@ -1,9 +1,13 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href={% static "css/style.css" %}>
+</head>
 <body>
-
-<h1>Hello World!</h1>
-<p>Welcome to my first Django project!</p>
-
+    <section>
+        <h1>Hola</h1>
+        <p>Este es un un archivo html estilizado con CSS</p>
+    </section>
 </body>
 </html>
