--- a/DApp/Prescrypto/templates/prescriptions.html
+++ b/DApp/Prescrypto/templates/prescriptions.html
@@ -1,23 +1,49 @@
 {% extends "core/master.html" %}
 {% block tittle %}Prescripciones{% endblock tittle %}
 {% block content %}
-<div class="centered_group">
-    <h1>Prescripciones:</h1>
-    <div>
-        <div class="card">
-            <h2>Oxicodona</h2>
-            <h3><strong>Fechas:</strong></h3>
-            <ul>
-                <li>2024/06/28</li>
-                <li>2024/07/28</li>
-                <li>2024/08/28</li>
-
-            </ul>
-            <div >
-                <button>save</button>
+<section>
+    <div style="max-width: 70ch;">
+        <h1 class="tittle">Prescripciones</h1>
+        <hr>
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, min-max(150px, 1fr));">
+            <div class="transparent_card">
+                <h2>Oxicodona</h2>
+                <h3><strong>Fechas:</strong></h3>
+                <ul>
+                    <li>2024/06/28</li>
+                    <li>2024/07/28</li>
+                    <li>2024/08/28</li>
+                </ul>
+                <div >
+                    <button style="color: black;" class="glow btn">Editar</button>
+                </div>
             </div>
-        </div>
+            <div class="transparent_card">
+                <h2>Paracetamol</h2>
+                <h3><strong>Fechas:</strong></h3>
+                <ul>
+                    <li>2024/06/28</li>
+                    <li>2024/07/28</li>
+                    <li>2024/08/28</li>
+                </ul>
+                <div >
+                    <button style="color: black;" class="glow btn">Editar</button>
+                </div>
+                </div>
+                <div class="transparent_card">
+                    <h2>Nalapraxona</h2>
+                    <h3><strong>Fechas:</strong></h3>
+                    <ul>
+                        <li>2024/06/28</li>
+                        <li>2024/07/28</li>
+                        <li>2024/08/28</li>
+                    </ul>
+                    <div >
+                        <button style="color: black;" class="glow btn">Editar</button>
+                    </div>
+                </div>
+            </div>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur provident quam esse beatae ipsam at inventore? Ea quae provident est fugiat, deleniti quibusdam. Sed, reprehenderit dolores. Totam eaque nostrum aliquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem enim impedit eius vitae, aliquam nam animi placeat sit aliquid provident obcaecati eaque illo distinctio eligendi temporibus ducimus maiores quia mollitia?</p>
     </div>
-</div>
+</section>
 {% endblock content %}
