editar plantilla de cerrar sesión

--- a/DApp/Prescrypto/templates/core/logout.html
+++ b/DApp/Prescrypto/templates/core/logout.html
@@ -10,7 +10,7 @@
         <form action="{{last}}" method="post">
             {% csrf_token %}
             <div style="display: flex;">
-                <button id="YES" class="glow btn" type="submit" value="ok" name="Si">Yes</button>
+                <button id="YES" class="glow btn" type="submit" value="ok" name="Si">Si</button>
                 <button id="NO" class="glow btn" type="submit" value="cancel" name="No">No</button>
             </div>
         </form>
